--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,9 @@ h1 {
    justify-content: center;
    align-items: center;
 }
+
+h3 {
+   width: 100px;
+   height: 20px;
+   background-color: lightblue;
+}
