--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,129 @@ h1 {
 .solucion {
    font-size: large;
    width: 200px;
-   height: 100px;
+   height: 50px;
    background-color: black;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
+   display: none;
 }
 
-h3 {
+.confirmar {
+   display: none
+}
+
+.rondaActual,
+.puntuacion {
    width: 100px;
    height: 20px;
    background-color: lightblue;
+   display: none;
+
 }
 
 .plantarse {
    display: none;
+}
+
+
+
+.rondas {
+   height: 400px;
+   background-color: rgb(187, 187, 187);
+   display: flex;
+   flex-direction: column-reverse;
+   justify-content: center;
+   align-items: flex-end
+}
+
+.ronda {
+   display: none;
+   width: 100px;
+   height: 20px;
+   background-color: darkcyan;
+   margin: 4px;
+}
+
+#ronda1 {
+   width: 100px;
+}
+
+#ronda2 {
+   width: 110px;
+}
+
+#ronda3 {
+   width: 120px;
+}
+
+#ronda4 {
+   width: 130px;
+}
+
+#ronda5 {
+   width: 140px;
+}
+
+#ronda6 {
+   width: 150px;
+}
+
+#ronda7 {
+   width: 160px;
+}
+
+#ronda8 {
+   width: 170px;
+}
+
+#ronda9 {
+   width: 180px;
+}
+
+#ronda10 {
+   width: 190px;
+}
+
+#ronda11 {
+   width: 200px;
+}
+
+#ronda12 {
+   width: 210px;
+}
+
+#ronda13 {
+   width: 220px;
+}
+
+#ronda14 {
+   width: 230px;
+}
+
+#ronda15 {
+   width: 240px;
+}
+
+.principal {
+   width: 100vw;
+   display: flex;
+   flex-direction: row;
+}
+
+.izquierda {
+   width: 50vw;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.derecha {
+   width: 50vw;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
