--- a/styles.css
+++ b/styles.css
@@ -12,20 +12,56 @@ h1 {
 
 
 .solucion {
-   font-size: large;
-   width: 200px;
+   display: none;
+   width: 50px;
    height: 50px;
    background-color: black;
+   font-size: 30px;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: white;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   display: none;
+
+   text-align: center;
+   justify-content: center
 }
 
-.confirmar {
-   display: none
+.barra {
+   display: none;
+   font-size: large;
+   width: 400px;
+   height: 20px;
+   background-color: rgb(255, 255, 255);
+   color: white;
+
+   position: relative;
+   border-radius: 10px;
+   border: solid 1px black;
+   margin-top: 10px;
 }
+
+.solucionBola {
+   display: none;
+   height: 20px;
+   width: 20px;
+   border-radius: 20px;
+   background-color: red;
+   position: absolute;
+   animation: crecerAncho 60s linear ;
+   animation-play-state: running;
+}
+
+@keyframes crecerAncho {
+   from {
+      width: 20px;
+   }
+
+   to {
+      width: 400px;
+   }
+}
+
+
+
+
 
 .rondaActual,
 .puntuacion {
