--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ h1 {
    }
 
    to {
-      width: 80vw;
+      width: 100%;
    }
 }
 
@@ -102,6 +102,7 @@ h1 {
 .plantarse:hover {
 
    cursor: pointer;
+   opacity: 0.7;
 }
 
 
@@ -220,6 +221,7 @@ h1 {
 
 .generarPregunta:hover {
    cursor: pointer;
+   opacity: 0.7;
 }
 
 
@@ -286,13 +288,18 @@ h1 {
 .boton50porciento,
 .botonSaltar,
 .botonPublico {
-   text-justify: center;
-   text-align: center;
-   padding: 0.2em;
-   border-radius: 50%;
-   width: 5em;
-   height: 5em;
-   margin: 1em;
-   border: solid 0.2em black;
+   width: 2em;
+   height: 2em;
+   background-color: gray;
+   border: solid 0.1em white;
+   border-radius: 1em;
+   font-size: xx-large;
+   margin-left: 1em;
+}
 
+.boton50porciento:hover,
+.botonSaltar:hover,
+.botonPublico:hover {
+   cursor: pointer;
+   opacity: 0.7;
 }
